- Improved: Price entered on inventory page is now related to selected quantity unit (#511)
- Improved: On transaction pages adding of known barcode is prevented (#541)
- Fixed: Product 'purchase to stock' conversion is preferred to additional conversions (#490)
- Fixed: Quantity units from default conversions are now selectable on transaction pages (#530)

2.2.1:
- New: Stock entries page (#403)
- Improved: Display stock locations on product overview bottom sheet (#449)
- Improved: Splash screen (will be further improved for Android 12 with the upcoming redesign)
- Fixed: On transfer page no locations were selectable as target (#515)
- Fixed: Crash after creating product with purchase or inventory transaction (#518)

2.2.0:
Please update your server to the latest version if you want to use all new features.
- New: Support for grocy server v3.3.0, no support for v3.1.2 and lower
- New: View and track chores (feature will be finished in the next versions) (#149)
- New: View and manage tasks (thanks @mcbloch for the initial work) (#435)
- New: Server v3.3.0 feature "Disable own stock" (#511)
- New: Server v3.3.0 feature "Default consume location" (#511)
- New: 'Extra field' option on stock overview page for additional info
- New: 'Extra field' option on shopping list page, can display price with server v3.2.0+ (#434)
- New: Shopping mode now groups items like on shopping list page (#430)
- New: Open Beauty Facts lookup as second online source (#257)
- New: Product option "Treat opened as out of stock" is available for server v3.2.0+
- New: Moved stock settings to menu category "user settings" & added shopping list settings (#511)
- Improved: Open button on consume page is now checkbox
- Improved: Product search on stock overview is now fuzzy search (#486)
- Improved: Barcode lookup now also with external scanner if enabled (#496)
- Improved: Some shortcuts were not working, also added new shortcuts for tasks